--- a/themes/countrycrafts/pages/index.htm
+++ b/themes/countrycrafts/pages/index.htm
@@ -4,4 +4,6 @@ url = "/"
 layout = "default"
 meta_title = "Welcome to Em's Country Crafts!"
 ==
-<h1>Hello, Mom</h1>
+<section x-data="{test: 'Hi Mom!'}" x-init="console.log(test)">
+    <h1 class="text-2xl">Hello, Mom</h1>
+</section>
