updated all things current

--- a/themes/countrycrafts/pages/index.htm
+++ b/themes/countrycrafts/pages/index.htm
@@ -4,6 +4,6 @@ url = "/"
 layout = "default"
 meta_title = "Welcome to Em's Country Crafts!"
 ==
-<section x-data="{test: 'Hi Mom!'}" x-init="console.log(test)">
-    <h1 class="text-2xl">Hello, Mom</h1>
+<section>
+    <h5 class="text-5xl">Body Text</h5>
 </section>
