created basic card

--- a/themes/countrycrafts/pages/index.htm
+++ b/themes/countrycrafts/pages/index.htm
@@ -4,6 +4,12 @@ url = "/"
 layout = "default"
 meta_title = "Welcome to Em's Country Crafts!"
 ==
-<section>
-    <h1 class="text-5xl">Body Text</h1>
+<section class="flex flex-col place-items-center">
+    <h1 class="text-5xl text-mom-red font-dancing">Welcome To Em's Country Crafts</h1>
+    <div class="mt-12 flex flex-row justify-center">
+        {% partial 'cards/card.htm' %}
+    </div>
+
+
+
 </section>
