--- a/themes/countrycrafts/pages/store.htm
+++ b/themes/countrycrafts/pages/store.htm
@@ -1,4 +1,7 @@
-title = "store"
+##
+meta_title = "Store Page | Welcome to Em's Country Crafts!"
+title = "Store"
+layout = "default"
 url = "/store"
 ==
 <h1>store</h1>
