--- a/themes/countrycrafts/pages/store.htm
+++ b/themes/countrycrafts/pages/store.htm
@@ -4,4 +4,29 @@ title = "Store"
 layout = "default"
 url = "/store"
 ==
-<h1>store</h1>
+<section class="flex flex-col space-y-16 my-16 place-items-center">
+    {% partial 'cards/item-category-card'
+        title="Shawls"
+        text="Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat."
+        imgs=['assets/images/TealWrap.png', 'assets/images/TealWrap.png','assets/images/TealWrap.png','assets/images/TealWrap.png']
+        bgColor="bg-teal-500"
+    %}
+    {% partial 'cards/item-category-card'
+        title="Ear Warmers"
+        text="Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat."
+        imgs=['assets/images/TealWrap.png', 'assets/images/TealWrap.png','assets/images/TealWrap.png','assets/images/TealWrap.png']
+        bgColor="bg-purple-800"
+    %}
+    {% partial 'cards/item-category-card'
+        title="Baby Blankets"
+        text="Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat."
+        imgs=['assets/images/TealWrap.png', 'assets/images/TealWrap.png','assets/images/TealWrap.png','assets/images/TealWrap.png']
+        bgColor="bg-red-300"
+    %}
+    {% partial 'cards/commission-card'
+        title="Want something custom?"
+        text="Do you want a scarf, or a hat? Or something completely unique? I love new challegnes! Contact today to inquire about custom orders."
+        img="assets/images/ContactBanner.jpeg"
+        bgColor="bg-stone-500"
+    %}
+</section>
