Set up all links

--- a/themes/countrycrafts/pages/blog.htm
+++ b/themes/countrycrafts/pages/blog.htm
@@ -1,4 +1,9 @@
-title = "blog"
+##
+meta_title = "Blog Page | Welcome to Em's Country Crafts!"
+title = "Blog"
+layout = "default"
 url = "/blog"
 ==
-<h1>blog</h1>
+<section class="flex flex-col space-y-16 my-16 place-items-center">
+    Blog Page
+</section>
