store items complete. working on blog pages next then about.

--- a/themes/countrycrafts/pages/store.htm
+++ b/themes/countrycrafts/pages/store.htm
@@ -5,6 +5,7 @@ layout = "default"
 url = "/store"
 ==
 <section class="flex flex-col space-y-16 my-16 place-items-center">
+    <h1 class="text-5xl text-center text-mom-red font-dancing">Store</h1>
     {% partial 'cards/item-category-card'
         title='Shawls'
         text='Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.'
