Updated plugins. created the store and store item page. fix pictures

--- a/themes/countrycrafts/pages/index.htm
+++ b/themes/countrycrafts/pages/index.htm
@@ -53,21 +53,21 @@ meta_title = "Welcome to Em's Country Crafts!"
             title="Teal Wrap"
             text="Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat."
             img="assets/images/TealWrap.png"
-            bgColor="bg-teal-500"
+            bgColor="bg-mom-teal"
         %}
         {%
             partial 'cards/vert-card.htm'
             title="Teal Wrap"
             text="Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat."
             img="assets/images/TealWrap.png"
-            bgColor="bg-indigo-500"
+            bgColor="bg-mom-navy"
         %}
         {%
             partial 'cards/vert-card.htm'
             title="Teal Wrap"
             text="Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat."
             img="assets/images/TealWrap.png"
-            bgColor="bg-red-300"
+            bgColor="bg-mom-pink"
         %}
     </div>
 </section>
