--- a/themes/countrycrafts/pages/store-item.htm
+++ b/themes/countrycrafts/pages/store-item.htm
@@ -14,7 +14,7 @@ value = "{{ :slug }}"
     <h1 class="text-5xl text-center text-mom-red font-dancing">Store - Item</h1>
     {% partial 'cards/purchase-card'
         title=Product.title
-        text=Product.description
+        text=product.description
         imgs=['assets/images/TealWrap.png', 'assets/images/TealWrap.png','assets/images/TealWrap.png','assets/images/TealWrap.png']
         bgColor='bg-teal-500'
     %}
