finished home page responsiveness

--- a/themes/countrycrafts/pages/index.htm
+++ b/themes/countrycrafts/pages/index.htm
@@ -27,22 +27,22 @@ handle = "Catalog\Product"
     </div>
 
     <div class="w-full h-[66em] xl:h-[52em] bg-black bg-wall-of-yarn bg-center bg-cover relative">
-        <div class="absolute my-20 z-20 text-white">
+        <div class="absolute my-20 z-20 text-white flex flex-col place-items-center xl:w-full">
             <h5 class="text-5xl xl:text-7xl text-center text-shadow-sm font-dancing">How To Order</h5>
-            <div class="flex flex-col xl:flex-row place-items-center xl:justify-between w-full xl:w-9/12 xl:mx-auto my-16 space-y-16">
-                <div class="flex flex-col bg-black/85 bg-blur-sm xl:p-8 font-dancing p-3 text-2xl xl:text-6xl rounded-xl w-9/12 xl:w-3/12 space-y-4">
+            <div class="flex flex-col xl:flex-row place-items-center xl:justify-evenly w-full my-16 space-y-16 xl:space-y-0 text-3xl xl:text-4xl">
+                <div class="flex flex-col bg-black/85 bg-blur-sm xl:p-8 font-dancing p-3 rounded-xl w-9/12 h-full xl:min-h-60 xl:w-3/12 space-y-4">
                     <h5>1. Item Type</h5>
                     <p class="w-full">
                         Select the type of item you want from the store.
                     </p>
                 </div>
-                <div class="flex flex-col bg-black/85 bg-blur-sm xl:p-8 font-dancing p-3 text-2xl xl:text-6xl rounded-xl w-9/12 xl:w-3/12 space-y-4">
+                <div class="flex flex-col bg-black/85 bg-blur-sm xl:p-8 font-dancing p-3 rounded-xl w-9/12 h-full xl:min-h-60 xl:w-3/12 space-y-4">
                     <h5>2. Measure Size</h5>
                     <p class="w-full">
                         Depending on the item you'll have to give us your measurements.
                     </p>
                 </div>
-                <div class="flex flex-col bg-black/85 bg-blur-sm xl:p-8 font-dancing p-3 text-2xl xl:text-6xl rounded-xl w-9/12 xl:w-3/12 space-y-4">
+                <div class="flex flex-col bg-black/85 bg-blur-sm xl:p-8 font-dancing p-3 rounded-xl w-9/12 h-full xl:min-h-60 xl:w-3/12 space-y-4">
                     <h5>3. Color Scheme</h5>
                     <p class="w-full">
                         Color Schemes are limited on current stocks of yarn.
