Fixed store responsiveness

--- a/themes/countrycrafts/pages/store.htm
+++ b/themes/countrycrafts/pages/store.htm
@@ -9,7 +9,7 @@ handle = "Catalog\Product"
 <section class="flex flex-col space-y-16 my-16 place-items-center">
     {% set products = Catalog.paginate(8) %}
     <h1 class="text-5xl text-center text-mom-red font-dancing">Store</h1>
-    <div class="flex flex-wrap flex-row justify-evenly w-6/12 gap-8 mx-auto [&>*:nth-child(2n)]:bg-mom-navy [&>*:nth-child(3n)]:bg-mom-red">
+    <div class="flex flex-wrap flex-row justify-evenly w-full lg:w-6/12 gap-8 mx-auto [&>*:nth-child(2n)]:bg-mom-navy [&>*:nth-child(3n)]:bg-mom-red">
         {% for product in products %}
             {%
                 partial 'cards/vert-card.htm'
