--- a/themes/countrycrafts/pages/store-item.htm
+++ b/themes/countrycrafts/pages/store-item.htm
@@ -8,14 +8,13 @@ handle = "Catalog\Product"
 identifier = "{{ :slug }}"
 value = "{{ :slug }}"
 ==
-<!-- TODO: Needs to be updated to allow wild-card -->
+{# Fix issues with Images #}
 <section class="flex flex-col space-y-16 my-16 place-items-center">
-    <!-- TODO: Item should be a wild-card -->
-    <h1 class="text-5xl text-center text-mom-red font-dancing">Store - Item</h1>
+    <h1 class="text-5xl text-center text-mom-red font-dancing">Store - {{Product.title}}</h1>
     {% partial 'cards/purchase-card'
         title=Product.title
-        text=product.description
-        imgs=['assets/images/TealWrap.png', 'assets/images/TealWrap.png','assets/images/TealWrap.png','assets/images/TealWrap.png']
+        text=Product.description
+        imgs=Product.product_image
         bgColor='bg-teal-500'
     %}
     {% partial 'cards/commission-card'
