--- a/themes/countrycrafts/pages/store-search.htm
+++ b/themes/countrycrafts/pages/store-search.htm
@@ -2,23 +2,35 @@ url = "/store/search"
 layout = "default"
 title = "Store Search"
 meta_title = "Store Search | Welcome to Em's Country Crafts!"
+
+[collection Catalog]
+handle = "Catalog\Product"
+
+[collection Category]
+handle = "Catalog\Category"
 ==
-{% set searchTerm = get('term')|term %}
-{% set products = Catalog.searchWhere(searchTerm, ['title', 'content']).paginate(2) %}
+{% set searchTerm = get('term')|trim %}
+{% set test = Catalog.get() %}
+{% set products = Catalog.searchWhere(searchTerm, ['title', 'name']).paginate(2) %}
+{% set categories = Category.searchWhere(searchTerm, ['title']).paginate(2) %}
+{% set catalogs = products|length != 0 ? products : categories %}
 {% put pageTitle = searchTerm ~ ' - Search Results' %}
+
 
 <section class="flex flex-col space-y-16 my-16 place-items-center">
     <h1 class="text-5xl text-center text-mom-red font-dancing">
-        {{ searchTerm - Search Results }}
+        Search Results: {{ searchTerm }}
     </h1>
     <div class="flex flex-col space-y-16 w-10/12 mx-auto lg:w-full place-items-center [&>*:nth-child(even)]:bg-red-700">
-        {% for post in posts %}
+        {{ dd(products) }}
+
+        {% for catalog in catalogs %}
         {% partial 'cards/hori-card.htm'
-            title=post.title
-            text=post.featured_text
-            img=post.preview_image.path
-            link=['Read More...', post.slug]
-            bgColor='bg-teal-500'
+            title=catalog.title
+            text=catalog.featured_text
+            img=catalog.product_image[0].path
+            link=['Purchase', product.slug]
+            bgColor='bg-mom-teal'
         %}
         {% endfor %}
     </div>
