--- a/themes/countrycrafts/pages/blog.htm
+++ b/themes/countrycrafts/pages/blog.htm
@@ -9,15 +9,18 @@ handle = "Blog\Post"
 {% set posts = blog.paginate(2)%}
 <section class="flex flex-col space-y-16 my-16 place-items-center">
     <h1 class="text-5xl text-center text-mom-red font-dancing">Blog</h1>
-    <div class="flex flex-col space-y-16 w-10/12 mx-auto lg:w-full place-items-center [&>*:nth-child(even)]:bg-red-700">
-        {{dd(posts)}}
+    <div class="flex flex-col space-y-16 w-10/12 mx-auto lg:w-full place-items-center [&>*:nth-child(even)]:bg-mom-red">
+
         {% for post in posts %}
+
+        {% set url = "/blog/post/#{post.slug}" %}
+
         {% partial 'cards/hori-card.htm'
             title=post.title
             text=post.featured_text
             img=post.preview_image.path
-            link=['Read More...', post.slug]
-            bgColor='bg-teal-500'
+            link=['Read More...', url]
+            bgColor='bg-mom-teal'
         %}
         {% endfor %}
     </div>
