--- a/themes/countrycrafts/pages/store-search.htm
+++ b/themes/countrycrafts/pages/store-search.htm
@@ -61,27 +61,29 @@ function onInit() {
     <h1 class="text-5xl text-center text-mom-red font-dancing">
         Search Results: {{ term }}
     </h1>
-    <div class="flex flex-col space-y-16 w-10/12 mx-auto lg:w-full place-items-center [&>*:nth-child(even)]:bg-mom-red">
+    <div class="flex flex-col space-y-16 w-10/12 mx-auto lg:w-full">
         {% if badResults %}
             <div class="text-mom-red text-xl w-6/12 text-center">
                 There were no results for: {{ term }} - please review the below
-                {% partial 'filters/category-filters.htm'
-                    categories=tags
-                %}
             </div>
         {% endif %}
 
-        {% for catalog in catalogs %}
-            {% set url = "/store/item/#{catalog.slug}" %}
+        <div class="w-6/12 mx-auto">
+        {% partial 'filters/category-filters.htm' categories=tags %}
+        </div>
 
-            {% partial 'cards/hori-card.htm'
-                title=catalog.title
-                text=catalog.featured_text
-                img=catalog.product_image[0].path
-                link=['Purchase', url.slug]
-                bgColor='bg-mom-teal'
-            %}
-        {% endfor %}
+        <div class="flex flex-wrap flex-row justify-between place-items-center w-5/12 mx-auto [&>*:nth-child(even)]:bg-mom-red [&>*]:mx-8">
+            {% for catalog in catalogs%}
+                {% set url = "/store/item/#{catalog.slug}" %}
+                {% partial 'cards/vert-card.htm'
+                    title=catalog.title
+                    text=catalog.featured_text
+                    img=catalog.product_image[0].path
+                    link=['Purchase', url.slug]
+                    bgColor='bg-mom-teal'
+                %}
+            {% endfor %}
+        </div>
     </div>
     {% if badResults %}
         {{catalogs.links|raw}}
