fixed featured to have a flag or random 3

--- a/themes/countrycrafts/pages/index.htm
+++ b/themes/countrycrafts/pages/index.htm
@@ -9,8 +9,16 @@ handle = "Pages\Home"
 [collection Catalog]
 handle = "Catalog\Product"
 ==
-{% set intros = home.get()%}
-{% set products = Catalog.get().random(3) %}
+<?
+function onInit(){
+    $this['intros'] = $this->home->get();
+    $this['featured'] = $this->Catalog->get()->filter(function($item){
+        return $item->featured_item;
+    });
+    $this['products'] = count($this['featured']) > 0 ? $this['featured'] : $this->Catalog->get()->random(3);
+}
+?>
+==
 
 <section class="flex flex-col space-y-16 my-16 place-items-center">
     <!-- Top Element -->
@@ -53,6 +61,8 @@ handle = "Catalog\Product"
 
         <div class="absolute inset-0 bg-black/10 backdrop-blur-sm"></div>
     </div>
+    <!-- TODO: Featured Items should be customizable -->
+    <h5 class="text-5xl xl:text-7xl text-center text-shadow-sm font-dancing">Featured Items</h5>
     <div class="w-full xl:w-8/12 xl:mx-auto flex flex-col place-items-center xl:flex-row xl:justify-around [&>*:nth-child(1)]:bg-mom-teal [&>*:nth-child(3n)]:bg-mom-pink">
         {% for product in products %}
             {%
